# broki

./: .gitignore  README.md
backend/: .env.example  conftest.py  pyproject.toml
backend/brainrot_guard/: __main__.py  analysis_factory.py  analysis_validation.py  app.py  app_types.py  artifacts.py  browser_validation.py  demo.py  demo_validation.py  learning.py  learning_validation.py  models.py  plotbrain_adapter.py  privacy_validation.py  proofs.py  readiness.py  readiness_report.py  repository.py  review_validation.py  runtime.py  tribe_adapter.py
backend/brainrot_guard/fixtures/: caregiver_seed.py
backend/brainrot_guard/ingestion/: __init__.py  scanner.py
backend/brainrot_guard/static/: review.css  review.html  review.js
backend/broki/: __init__.py  __main__.py
backend/scripts/: collect_target_proofs.sh  seed_caregiver_calibration.py  smoke.sh  smoke_proofs.sh
backend/tests/: conftest.py  test_analysis_factory.py  test_analysis_validation.py  test_browser_validation.py  test_caregiver_seeder.py  test_collect_target_proofs_script.py  test_demo_validation.py  test_feedback_learning.py  test_frame_manifest.py  test_ingestion_duration.py  test_learning_validation.py  test_live_readiness.py  test_plotbrain_adapter.py  test_privacy_validation.py  test_proof_loading.py  test_rebuilt_baseline.py  test_review_validation.py  test_runtime_analysis.py  test_smoke_script.py  test_threshold_learning.py  test_tribe_adapter.py  test_validate_readiness_wiring.py  test_vlm_gating.py  test_vlm_provider_adapters.py  test_vlm_provider_payload.py  test_vlm_status.py
(+6 files in other folders)
